Swagger cleanup
